Fix map and header spacing

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,8 +5,8 @@ $header-links: #fff;
 .header {
   background-color: $header-bg;
   color: $resources;
-  height: 30px;
-  padding: 5px;
+  height: 35px;
+  padding: 2px;
 
   .resources {
     float: left;
