--- a/app/assets/stylesheets/map.css
+++ b/app/assets/stylesheets/map.css
@@ -5,7 +5,7 @@ body {
 
 #map {
   position: absolute;
-  top: 30px;
+  top: 35px;
   bottom: 0;
   width: 100%;
 }
